--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
     
 
 
-    <pre>{{ user_roles | safe }}</pre>
+    <!-- <pre>{{ user_roles | safe }}</pre> -->
 
     <div class="container-fluid">
         <div class="row g-0">
