--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -66,8 +66,9 @@
     </div>
 
     {% else %}
-    
+    {% if is_privileged %}
     <p class="lead mb-4">Select a form to begin the job card process.</p>
+    {% endif %}
     <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4">
         {% if is_privileged %}
         <div class="col">
